--- a/build.gradle
+++ b/build.gradle
@@ -13,46 +13,34 @@ buildscript {
     }
 }
 
-group 'at.obyoxar.nanoclock'
-version '1.0-SNAPSHOT'
+subprojects{
+    apply plugin: 'java'
+    apply plugin: 'kotlin'
 
-apply plugin: 'java'
-apply plugin: 'application'
-apply plugin: 'kotlin'
+    compileKotlin {
+        kotlinOptions.jvmTarget = "1.8"
+    }
+    compileTestKotlin {
+        kotlinOptions.jvmTarget = "1.8"
+    }
+    kotlin {
+        experimental {
+            coroutines "enable"
+        }
+    }
 
-mainClassName = "MainKt"
+    repositories {
+        mavenCentral()
+        jcenter()
+        maven { url "https://dl.bintray.com/kotlin/ktor" }
+    }
 
-sourceCompatibility = 1.8
-
-repositories {
-    mavenCentral()
-    jcenter()
-    maven { url "https://dl.bintray.com/kotlin/ktor" }
-}
-
-dependencies {
-    compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    compile "com.github.kittinunf.fuel:fuel:$fuel_version" //for JVM
-    compile "com.github.kittinunf.fuel:fuel-coroutines:$fuel_version" //for JVM
-    compile "com.github.kittinunf.fuel:fuel-gson:$fuel_version" //for JVM
-    compile "io.ktor:ktor-server-core:$ktor_version"
-    compile "io.ktor:ktor-server-netty:$ktor_version"
-    compile 'nl.komponents.kovenant:kovenant:3.3.0'
-    compile 'org.slf4j:slf4j-simple:1.6.1'
-    compile "org.apache.logging.log4j:log4j-slf4j-impl:$log4j_version"
-    compile 'io.github.microutils:kotlin-logging:1.5.4'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-}
-
-compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-kotlin {
-    experimental {
-        coroutines "enable"
+    dependencies{
+        compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+        compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+        testCompile group: 'junit', name: 'junit', version: '4.12'
+        compile 'org.slf4j:slf4j-simple:1.6.1'
+        compile "org.apache.logging.log4j:log4j-slf4j-impl:$log4j_version"
+        compile 'io.github.microutils:kotlin-logging:1.5.4'
     }
 }
