Small changes and fixes

--- a/Connector/build.gradle
+++ b/Connector/build.gradle
@@ -1,5 +1,5 @@
-group 'at.obyoxar.nanoclock'
-version '1.0-SNAPSHOT'
+group = 'at.obyoxar.nanoclock'
+version = '0.1.0'
 
 sourceCompatibility = 1.8
 
