--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ subprojects{
     repositories {
         mavenCentral()
         jcenter()
-        maven { url "https://dl.bintray.com/kotlin/ktor" }
+        maven { url = "https://dl.bintray.com/kotlin/ktor" }
     }
 
     dependencies{
